kubernetes/overlays/apps/infra/applications/keycloak/network-policies/allow-remote-node.yaml
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: remote-node-allow
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/instanceRole: replica
  ingress:
  - fromEntities:
    - remote-node
